fix(numeric_range): width on mobile

--- a/app/components/folio/console/ui/index/filters_component.sass
+++ b/app/components/folio/console/ui/index/filters_component.sass
@@ -183,3 +183,6 @@
     &__toggle-wrap + &__cancel-wrap
       text-align: right
       justify-content: flex-end
+
+    &__numeric-range > .input-group:has(.form-group__input-controls) > &__numeric-range-input
+      width: 100%
